#750: Fix sidebar not visible on short pages.
This commit fixes the scenario on which when the main content is shorter than the sidebar, and the page is scrolled down, the lower part of the sidebar is not visible.

--- a/source/widgets/sidebar/sidebar.scss
+++ b/source/widgets/sidebar/sidebar.scss
@@ -19,6 +19,14 @@ $sidebarObjectPush: $basicPush * 5;
 		position: relative;
 	}
 
+	&.min_height_lock {
+		visibility: hidden;
+
+		@include mq($to: 'subnav') {
+			display: none;
+		}
+	}
+
 	&.sticky,
 	.widg_sidebar__accordion {
 		position: fixed;
